test/language/errors/errors.hm
func runtime(s) {
  let i = index(s, "\n")
  if i > 0 {
    let c = index(s, ":")
    if c > 0 {
      return s[c + 2:i]
    }
    return s[:i]
  }
  return s
}
